// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryModal should render with a subcategory 1`] = `
Array [
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <BlurView
      blurAmount={10}
      blurType="dark"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": "flex-end",
        "backgroundColor": "#FFFFFF",
        "borderColor": undefined,
        "borderTopLeftRadius": 22.473239436619718,
        "borderTopRightRadius": 22.473239436619718,
        "borderWidth": 0,
        "flexDirection": undefined,
        "flexShrink": 1,
        "justifyContent": undefined,
        "marginBottom": -64,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 45,
        "maxHeight": undefined,
        "overflow": "visible",
        "paddingBottom": 64,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 10,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
        "width": 512,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "padding": 18,
        }
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "fontFamily": "SourceSansPro-Black",
              },
              Object {
                "alignSelf": "center",
                "fontSize": 27,
                "marginBottom": 22,
              },
            ],
            Object {
              "fontSize": 19.664084507042254,
            },
            Object {
              "alignSelf": "center",
              "fontSize": 27,
              "marginBottom": 22,
            },
          ]
        }
      >
        Category
      </Text>
      <View
        style={
          Object {
            "marginBottom": 18,
          }
        }
      >
        <Text
          style={
            Array [
              Array [
                Object {
                  "fontFamily": "SourceSansPro-Black",
                },
                Object {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 7,
                },
              ],
              Object {
                "fontSize": 19.664084507042254,
              },
              Object {
                "color": "#0E4B75",
                "fontSize": 16,
                "marginBottom": 7,
              },
            ]
          }
        >
          Choose a Category:
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#A4C7DF",
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Income
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Expense
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Transfer
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Exchange
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "marginTop": 18,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "borderRadius": 11,
                "justifyContent": "center",
                "minHeight": 67,
                "paddingHorizontal": 22,
              },
              Object {
                "flexGrow": 0,
                "marginBottom": 11,
                "marginLeft": 11,
                "marginRight": 11,
                "marginTop": 11,
                "paddingLeft": 22,
                "paddingRight": 65,
                "paddingVertical": 0,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderTopWidth": 1,
                  "bottom": 0,
                  "left": 22,
                  "position": "absolute",
                  "right": 22,
                },
                Object {
                  "borderColor": undefined,
                  "right": 11,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "borderBottomLeftRadius": 11,
                  "borderBottomWidth": 1,
                  "borderLeftWidth": 1,
                  "borderRightWidth": 0,
                  "borderTopLeftRadius": 11,
                  "borderTopWidth": 1,
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 22,
                },
                Object {
                  "borderColor": undefined,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "borderBottomRightRadius": 11,
                  "borderBottomWidth": 1,
                  "borderLeftWidth": 0,
                  "borderRightWidth": 1,
                  "borderTopRightRadius": 11,
                  "borderTopWidth": 1,
                  "bottom": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 22,
                },
                Object {
                  "borderColor": undefined,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "borderTopWidth": 1,
                  "left": 22,
                  "position": "absolute",
                  "right": 22,
                  "top": 0,
                },
                Object {
                  "borderColor": undefined,
                  "left": 34,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "height": 67,
                  "justifyContent": "center",
                  "left": 0,
                  "paddingHorizontal": 22,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "paddingLeft": 22,
                  "paddingRight": 65,
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "padding": 0,
                  },
                  Object {
                    "color": undefined,
                    "transform": Array [
                      Object {
                        "translateX": 6,
                      },
                      Object {
                        "translateY": -34,
                      },
                      Object {
                        "scale": 0.75,
                      },
                    ],
                  },
                ]
              }
            >
              Choose a sub-category
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              Array [
                Object {
                  "bottom": -28,
                  "color": "#E85466",
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 17,
                  "left": 28,
                  "position": "absolute",
                },
                Object {
                  "opacity": 0,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "bottom": -10,
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 17,
                  "position": "absolute",
                  "right": 28,
                },
                Object {
                  "color": undefined,
                  "opacity": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            
          </Text>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Object {
                    "color": "rgba(255, 255, 255, .75)",
                    "fontSize": 22,
                    "padding": 22,
                  },
                  Object {
                    "fontFamily": "anticon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                },
                Object {
                  "paddingRight": 65,
                },
              ]
            }
          >
            <TextInput
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              autoCapitalize="none"
              autoFocus={true}
              editable={true}
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              returnKeyType="done"
              secureTextEntry={false}
              selectionColor="#FFFFFF"
              style={
                Array [
                  Object {
                    "alignSelf": "stretch",
                    "color": "#FFFFFF",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "padding": 0,
                  },
                  Object {
                    "flexGrow": 0,
                  },
                ]
              }
              textAlignVertical="top"
              value="Paycheck"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <RCTScrollView
          applyWindowCorrection={[Function]}
          canChangeSize={true}
          contentContainerStyle={
            Object {
              "backgroundColor": undefined,
              "minHeight": 1,
              "minWidth": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            }
          }
          contentHeight={0}
          contentWidth={0}
          data={
            Array [
              Object {
                "display": "Income: Paycheck",
                "new": true,
                "raw": "Income:Paycheck",
                "selected": true,
              },
              Object {
                "display": "Exchange: Paycheck",
                "new": true,
                "raw": "Exchange:Paycheck",
                "selected": false,
              },
              Object {
                "display": "Expense: Paycheck",
                "new": true,
                "raw": "Expense:Paycheck",
                "selected": false,
              },
              Object {
                "display": "Transfer: Paycheck",
                "new": true,
                "raw": "Transfer:Paycheck",
                "selected": false,
              },
            ]
          }
          dataProvider={
            DataProvider {
              "_data": Array [
                Object {
                  "display": "Income: Paycheck",
                  "new": true,
                  "raw": "Income:Paycheck",
                  "selected": true,
                },
                Object {
                  "display": "Exchange: Paycheck",
                  "new": true,
                  "raw": "Exchange:Paycheck",
                  "selected": false,
                },
                Object {
                  "display": "Expense: Paycheck",
                  "new": true,
                  "raw": "Expense:Paycheck",
                  "selected": false,
                },
                Object {
                  "display": "Transfer: Paycheck",
                  "new": true,
                  "raw": "Transfer:Paycheck",
                  "selected": false,
                },
              ],
              "_firstIndexToProcess": 0,
              "_hasStableIds": true,
              "_requiresDataChangeHandling": false,
              "_size": 4,
              "getStableId": [Function],
              "rowHasChanged": [Function],
            }
          }
          disableRecycling={false}
          estimatedItemSize={67}
          extendedState={Object {}}
          externalScrollView={[Function]}
          finalRenderAheadOffset={250}
          forceNonDeterministicRendering={true}
          horizontal={false}
          initialOffset={0}
          initialRenderIndex={0}
          isHorizontal={false}
          keyExtractor={[Function]}
          keyboardShouldPersistTaps="handled"
          layoutProvider={
            GridLayoutProviderWithProps {
              "_acceptableRelayoutDelta": 1,
              "_getHeightOrWidth": [Function],
              "_getLayoutTypeForIndex": [Function],
              "_getSpan": [Function],
              "_hasExpired": false,
              "_maxSpan": 1,
              "_setLayoutForType": [Function],
              "_tempDim": Object {
                "height": 0,
                "width": 0,
              },
              "averageWindow": AverageWindow {
                "currentAverage": 67,
                "currentCount": 1,
                "inputValues": Array [
                  67,
                ],
                "nextIndex": 1,
              },
              "defaultEstimatedItemSize": 100,
              "layoutObject": Object {
                "size": undefined,
                "span": undefined,
              },
              "props": Object {
                "data": Array [
                  Object {
                    "display": "Income: Paycheck",
                    "new": true,
                    "raw": "Income:Paycheck",
                    "selected": true,
                  },
                  Object {
                    "display": "Exchange: Paycheck",
                    "new": true,
                    "raw": "Exchange:Paycheck",
                    "selected": false,
                  },
                  Object {
                    "display": "Expense: Paycheck",
                    "new": true,
                    "raw": "Expense:Paycheck",
                    "selected": false,
                  },
                  Object {
                    "display": "Transfer: Paycheck",
                    "new": true,
                    "raw": "Transfer:Paycheck",
                    "selected": false,
                  },
                ],
                "estimatedItemSize": 67,
                "keyExtractor": [Function],
                "keyboardShouldPersistTaps": "handled",
                "numColumns": 1,
                "renderItem": [Function],
              },
              "renderWindowInsets": Object {
                "height": 0,
                "width": 0,
              },
              "shouldRefreshWithAnchoring": true,
            }
          }
          maxRenderAhead={750}
          numColumns={1}
          onEndReached={[Function]}
          onEndReachedThreshold={0}
          onEndReachedThresholdRelative={0}
          onItemLayout={[Function]}
          onLayout={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onSizeChanged={[Function]}
          onVisibleIndicesChanged={[Function]}
          removeClippedSubviews={false}
          renderAheadOffset={0}
          renderAheadStep={250}
          renderContentContainer={[Function]}
          renderItem={[Function]}
          renderItemContainer={[Function]}
          rowRenderer={[Function]}
          scrollEventThrottle={16}
          scrollThrottle={16}
          scrollViewProps={
            Object {
              "contentContainerStyle": Object {
                "backgroundColor": undefined,
                "minHeight": 1,
                "minWidth": 1,
                "paddingLeft": 0,
                "paddingRight": 0,
              },
              "onLayout": [Function],
              "onScrollBeginDrag": [Function],
              "refreshControl": undefined,
              "style": Object {
                "minHeight": 1,
                "minWidth": 1,
              },
            }
          }
          style={
            Object {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
          suppressBoundedSizeException={true}
          windowCorrectionConfig={
            Object {
              "applyToInitialOffset": true,
              "applyToItemScroll": true,
              "value": Object {
                "endCorrection": 0,
                "startCorrection": 0,
                "windowShift": -0,
              },
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "flexDirection": "column",
                }
              }
            >
              <AutoLayoutView
                enableInstrumentation={false}
                horizontal={false}
                onBlankAreaEvent={[Function]}
                onLayout={[Function]}
                renderAheadOffset={0}
                scrollOffset={0}
                style={
                  Object {
                    "height": 0,
                    "width": 0,
                  }
                }
                windowSize={0}
              />
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>,
]
`;

exports[`CategoryModal should render with an empty subcategory 1`] = `
Array [
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <BlurView
      blurAmount={10}
      blurType="dark"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": "flex-end",
        "backgroundColor": "#FFFFFF",
        "borderColor": undefined,
        "borderTopLeftRadius": 22.473239436619718,
        "borderTopRightRadius": 22.473239436619718,
        "borderWidth": 0,
        "flexDirection": undefined,
        "flexShrink": 1,
        "justifyContent": undefined,
        "marginBottom": -64,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 45,
        "maxHeight": undefined,
        "overflow": "visible",
        "paddingBottom": 64,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 10,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
        "width": 512,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "padding": 18,
        }
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "fontFamily": "SourceSansPro-Black",
              },
              Object {
                "alignSelf": "center",
                "fontSize": 27,
                "marginBottom": 22,
              },
            ],
            Object {
              "fontSize": 19.664084507042254,
            },
            Object {
              "alignSelf": "center",
              "fontSize": 27,
              "marginBottom": 22,
            },
          ]
        }
      >
        Category
      </Text>
      <View
        style={
          Object {
            "marginBottom": 18,
          }
        }
      >
        <Text
          style={
            Array [
              Array [
                Object {
                  "fontFamily": "SourceSansPro-Black",
                },
                Object {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 7,
                },
              ],
              Object {
                "fontSize": 19.664084507042254,
              },
              Object {
                "color": "#0E4B75",
                "fontSize": 16,
                "marginBottom": 7,
              },
            ]
          }
        >
          Choose a Category:
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Income
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Expense
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Transfer
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#A4C7DF",
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Exchange
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "marginTop": 18,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "borderRadius": 11,
                "justifyContent": "center",
                "minHeight": 67,
                "paddingHorizontal": 22,
              },
              Object {
                "flexGrow": 0,
                "marginBottom": 11,
                "marginLeft": 11,
                "marginRight": 11,
                "marginTop": 11,
                "paddingLeft": 22,
                "paddingRight": 65,
                "paddingVertical": 0,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderTopWidth": 1,
                  "bottom": 0,
                  "left": 22,
                  "position": "absolute",
                  "right": 22,
                },
                Object {
                  "borderColor": undefined,
                  "right": 11,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "borderBottomLeftRadius": 11,
                  "borderBottomWidth": 1,
                  "borderLeftWidth": 1,
                  "borderRightWidth": 0,
                  "borderTopLeftRadius": 11,
                  "borderTopWidth": 1,
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 22,
                },
                Object {
                  "borderColor": undefined,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "borderBottomRightRadius": 11,
                  "borderBottomWidth": 1,
                  "borderLeftWidth": 0,
                  "borderRightWidth": 1,
                  "borderTopRightRadius": 11,
                  "borderTopWidth": 1,
                  "bottom": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 22,
                },
                Object {
                  "borderColor": undefined,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "borderTopWidth": 1,
                  "left": 22,
                  "position": "absolute",
                  "right": 22,
                  "top": 0,
                },
                Object {
                  "borderColor": undefined,
                  "left": 22,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "height": 67,
                  "justifyContent": "center",
                  "left": 0,
                  "paddingHorizontal": 22,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "paddingLeft": 22,
                  "paddingRight": 65,
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "padding": 0,
                  },
                  Object {
                    "color": undefined,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateY": -0,
                      },
                      Object {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              Choose a sub-category
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              Array [
                Object {
                  "bottom": -28,
                  "color": "#E85466",
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 17,
                  "left": 28,
                  "position": "absolute",
                },
                Object {
                  "opacity": 0,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "bottom": -10,
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 17,
                  "position": "absolute",
                  "right": 28,
                },
                Object {
                  "color": undefined,
                  "opacity": 0,
                  "transform": Array [
                    Object {
                      "translateX": 6,
                    },
                    Object {
                      "scale": 0,
                    },
                  ],
                },
              ]
            }
          >
            
          </Text>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                },
                Object {
                  "paddingRight": 65,
                },
              ]
            }
          >
            <TextInput
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              autoCapitalize="none"
              autoFocus={true}
              editable={true}
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              returnKeyType="done"
              secureTextEntry={false}
              selectionColor="#FFFFFF"
              style={
                Array [
                  Object {
                    "alignSelf": "stretch",
                    "color": "#FFFFFF",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "padding": 0,
                  },
                  Object {
                    "flexGrow": 0,
                  },
                ]
              }
              textAlignVertical="top"
              value=""
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <RCTScrollView
          applyWindowCorrection={[Function]}
          canChangeSize={true}
          contentContainerStyle={
            Object {
              "backgroundColor": undefined,
              "minHeight": 1,
              "minWidth": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            }
          }
          contentHeight={0}
          contentWidth={0}
          data={
            Array [
              Object {
                "display": "Exchange: Buy Bitcoin",
                "new": false,
                "raw": "Exchange:Buy Bitcoin",
                "selected": true,
              },
              Object {
                "display": "Exchange: Sell Bitcoin",
                "new": false,
                "raw": "Exchange:Sell Bitcoin",
                "selected": true,
              },
              Object {
                "display": "Expense: Air Travel",
                "new": false,
                "raw": "Expense:Air Travel",
                "selected": false,
              },
              Object {
                "display": "Expense: Alcohol & Bars",
                "new": false,
                "raw": "Expense:Alcohol & Bars",
                "selected": false,
              },
            ]
          }
          dataProvider={
            DataProvider {
              "_data": Array [
                Object {
                  "display": "Exchange: Buy Bitcoin",
                  "new": false,
                  "raw": "Exchange:Buy Bitcoin",
                  "selected": true,
                },
                Object {
                  "display": "Exchange: Sell Bitcoin",
                  "new": false,
                  "raw": "Exchange:Sell Bitcoin",
                  "selected": true,
                },
                Object {
                  "display": "Expense: Air Travel",
                  "new": false,
                  "raw": "Expense:Air Travel",
                  "selected": false,
                },
                Object {
                  "display": "Expense: Alcohol & Bars",
                  "new": false,
                  "raw": "Expense:Alcohol & Bars",
                  "selected": false,
                },
              ],
              "_firstIndexToProcess": 0,
              "_hasStableIds": true,
              "_requiresDataChangeHandling": false,
              "_size": 4,
              "getStableId": [Function],
              "rowHasChanged": [Function],
            }
          }
          disableRecycling={false}
          estimatedItemSize={67}
          extendedState={Object {}}
          externalScrollView={[Function]}
          finalRenderAheadOffset={250}
          forceNonDeterministicRendering={true}
          horizontal={false}
          initialOffset={0}
          initialRenderIndex={0}
          isHorizontal={false}
          keyExtractor={[Function]}
          keyboardShouldPersistTaps="handled"
          layoutProvider={
            GridLayoutProviderWithProps {
              "_acceptableRelayoutDelta": 1,
              "_getHeightOrWidth": [Function],
              "_getLayoutTypeForIndex": [Function],
              "_getSpan": [Function],
              "_hasExpired": false,
              "_maxSpan": 1,
              "_setLayoutForType": [Function],
              "_tempDim": Object {
                "height": 0,
                "width": 0,
              },
              "averageWindow": AverageWindow {
                "currentAverage": 67,
                "currentCount": 1,
                "inputValues": Array [
                  67,
                ],
                "nextIndex": 1,
              },
              "defaultEstimatedItemSize": 100,
              "layoutObject": Object {
                "size": undefined,
                "span": undefined,
              },
              "props": Object {
                "data": Array [
                  Object {
                    "display": "Exchange: Buy Bitcoin",
                    "new": false,
                    "raw": "Exchange:Buy Bitcoin",
                    "selected": true,
                  },
                  Object {
                    "display": "Exchange: Sell Bitcoin",
                    "new": false,
                    "raw": "Exchange:Sell Bitcoin",
                    "selected": true,
                  },
                  Object {
                    "display": "Expense: Air Travel",
                    "new": false,
                    "raw": "Expense:Air Travel",
                    "selected": false,
                  },
                  Object {
                    "display": "Expense: Alcohol & Bars",
                    "new": false,
                    "raw": "Expense:Alcohol & Bars",
                    "selected": false,
                  },
                ],
                "estimatedItemSize": 67,
                "keyExtractor": [Function],
                "keyboardShouldPersistTaps": "handled",
                "numColumns": 1,
                "renderItem": [Function],
              },
              "renderWindowInsets": Object {
                "height": 0,
                "width": 0,
              },
              "shouldRefreshWithAnchoring": true,
            }
          }
          maxRenderAhead={750}
          numColumns={1}
          onEndReached={[Function]}
          onEndReachedThreshold={0}
          onEndReachedThresholdRelative={0}
          onItemLayout={[Function]}
          onLayout={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onSizeChanged={[Function]}
          onVisibleIndicesChanged={[Function]}
          removeClippedSubviews={false}
          renderAheadOffset={0}
          renderAheadStep={250}
          renderContentContainer={[Function]}
          renderItem={[Function]}
          renderItemContainer={[Function]}
          rowRenderer={[Function]}
          scrollEventThrottle={16}
          scrollThrottle={16}
          scrollViewProps={
            Object {
              "contentContainerStyle": Object {
                "backgroundColor": undefined,
                "minHeight": 1,
                "minWidth": 1,
                "paddingLeft": 0,
                "paddingRight": 0,
              },
              "onLayout": [Function],
              "onScrollBeginDrag": [Function],
              "refreshControl": undefined,
              "style": Object {
                "minHeight": 1,
                "minWidth": 1,
              },
            }
          }
          style={
            Object {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
          suppressBoundedSizeException={true}
          windowCorrectionConfig={
            Object {
              "applyToInitialOffset": true,
              "applyToItemScroll": true,
              "value": Object {
                "endCorrection": 0,
                "startCorrection": 0,
                "windowShift": -0,
              },
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "flexDirection": "column",
                }
              }
            >
              <AutoLayoutView
                enableInstrumentation={false}
                horizontal={false}
                onBlankAreaEvent={[Function]}
                onLayout={[Function]}
                renderAheadOffset={0}
                scrollOffset={0}
                style={
                  Object {
                    "height": 0,
                    "width": 0,
                  }
                }
                windowSize={0}
              />
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>,
]
`;
